--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f7fa;
+    background-color: #9c9d9e;
     color: #333;
 }
 
